--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
             <section id="main" ng-show="todos.length" ng-cloak>
                 <ul id="todo-list">
-                    <li ng-repeat="todo in todos" ng-class="{completed: todo.completed}">
+                    <li ng-repeat="todo in todos track by $index" ng-class="{completed: todo.completed}">
                         <label>
-                            <input class="toggle" type="checkbox" ng-model="todo.completed" ng-click="updateCompleted()">
+                            <input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="updateCompleted()">
                             {{todo.title}}
                         </label>
                         <button class="remove" ng-click="removeTodo(todo)">✘</button>
